# battleborn-ai

./: .gitignore  CUSTOMIZE.md  Dockerfile  Modelfile.template  PIPELINE_INSTRUCTIONS.md  README.md  check_pipeline.py  check_status.py  docker-compose.yml  execute_pipeline.bat  execute_pipeline.cmd  ids.txt  inline_test.py  nvidia_models.json  pyproject.toml  run_data_pipeline.py  run_full_pipeline.py  run_pipeline.bat  run_pipeline.py  run_pipeline_direct.py  run_teacher_pipeline.bat  run_teacher_pipeline.py  test_exec.py  test_script.py
artifacts/: clarification_smoke.json  generated_tickets_more.json  teacher_runs_more.jsonl
data/: knowledge_base.json  tickets.json
outputs/: ticket_summary_report.txt  workflow_20260326T090937656027Z.json  workflow_20260326T130837251413Z.json  workflow_20260326T131026261381Z.json  workflow_20260326T131043696834Z.json  workflow_20260326T131113609526Z.json  workflow_20260326T131139412778Z.json  workflow_20260326T131337681408Z.json  workflow_20260326T131348951592Z.json  workflow_20260326T134505097979Z.json  workflow_20260326T134655900989Z.json  workflow_20260326T134712995077Z.json  workflow_20260326T134738695605Z.json  workflow_20260326T135311080643Z.json  workflow_20260326T135334680608Z.json  workflow_20260326T135345502030Z.json  workflow_20260326T135507420093Z.json  workflow_20260326T135544286281Z.json  workflow_20260326T135628821549Z.json  workflow_20260326T135640617333Z.json  workflow_20260326T135657404636Z.json  workflow_20260326T135808193604Z.json  workflow_20260326T135822243646Z.json  workflow_20260326T135832827772Z.json  workflow_20260326T135958105893Z.json  workflow_20260326T140012866105Z.json  workflow_20260326T140023226911Z.json  workflow_20260326T140112218706Z.json  workflow_20260326T140134218195Z.json  workflow_20260326T140148698905Z.json  workflow_20260326T140200392380Z.json  workflow_20260326T140237205813Z.json
scripts/: generate_report.py  generate_synthetic_tickets.py  generate_teacher_runs.py  merge_lora.py  train_lora.py
src/: __init__.py  __main__.py  agent_toolset.py  nvidia_agent.py  nvidia_agent_executor.py  openai_agent.py  openai_agent_executor.py  ui.html
tests/: test_agent.py  test_dataset.py  test_few_shot.py  test_knowledge_base.py  test_merge_lora.py  (+3 more)
(+30 files in other folders)
