[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ticket-agent"
version = "0.1.0"
description = "Hackathon MVP for customer ticket resolution with Ollama-backed planning."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "ollama>=0.4.7",
  "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
train = [
  "accelerate>=0.34",
  "bitsandbytes>=0.43",
  "datasets>=2.20",
  "peft>=0.12",
  "transformers>=4.45",
  "trl>=0.10",
]

[project.scripts]
ticket-agent = "ticket_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
